--- a/templates/picklepagestemplates/about.html
+++ b/templates/picklepagestemplates/about.html
@@ -2,26 +2,220 @@
 {% load static %}
 {% block content %}
 <div><center>
-<h1>History</h1> <!-- https://longcoveclub.com/news/the-history-of-pickleball -->
-<p>In 1965, two dads named Joel Pritchard and Bill Bell arrived at Pritchard’s home on Bainbridge Island, Washington, after a golf outing. They found that their families were bored with no way to pass the time. Looking to alleviate the boredom of his loved ones and close friends, Pritchard started to hatch a plan to bring an end to the group’s summer time woes. Pritchard’s property had an old badminton court so they started there with hopes of playing. However, they couldn’t find enough rackets for a full game so instead, he improvised by using spare ping pong paddles and a wiffle ball. With these bits and pieces lying around, a brand-new game was born.</p>
-<br><br>
-<h1>Rules</h1>
-<h2>General Rules</h2>
-  <p>Pickleball is a paddle sport played on a badminton-sized court with a slightly modified tennis net. The game is played with a ball similar to a whiffle ball and paddles similar to those used in ping-pong.</p>
-  <p>The rules of pickleball are similar to those of tennis, but there are some key differences. For example, players are not allowed to volley the ball (i.e. hit it before it bounces) in the non-volley zone (the area within 7 feet of the net), and the serve must be underhand and hit diagonally to the other side of the court.</p>
-
-  <h2>Scoring</h2>
-  <p>In pickleball, points are scored only by the serving team. The first team to score 11 points wins, as long as they have a lead of at least two points. If the score reaches 10-10, the game continues until one team has a two-point lead.</p>
-
-  <h2>Doubles vs. Singles</h2>
-  <p>Pickleball can be played with either two players on each team (doubles) or one player on each team (singles). The rules are the same for both doubles and singles, but the positioning and strategy can be different.</p>
-
-  <h2>Faults and Penalties</h2>
-  <p>Pickleball has several rules that can result in a fault or penalty. For example, if a player hits the ball out of bounds, hits the ball before it has a chance to bounce, or hits the ball into the non-volley zone before it has bounced, their team will lose the point. In addition, if a player hinders their opponent's ability to make a fair return, they may be called for a hindrance and their team will lose the point.</p>
-  <p>It is important for players to be aware of the rules of pickleball and avoid committing faults and penalties. This will ensure that the game is fair and fun for everyone.</p>
-</body>
-</html>
-
-</center>
+    <center><h1 class="totaltitle">About</h1></center>
+    <section class="page-section about-heading">
+      <div class="container">
+          <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/Pickleball-court.jpg' %}" alt="..." />
+          <div class="about-heading-content">
+              <div class="row">
+                  <div class="col-xl-9 col-lg-10 mx-auto">
+                      <div class="bg-faded2 rounded p-5">
+                          <h2 class="section-heading mb-4">
+                              <span class="section-heading-upper">How it Started</span>
+                              <span class="section-heading-lower">History</span>
+                          </h2>
+                          <p>In 1965, two dads named Joel Pritchard and Bill Bell arrived at Pritchard’s home on Bainbridge Island, Washington, after a golf outing. They found that their families were bored with no way to pass the time. Looking to alleviate the boredom of his loved ones and close friends, Pritchard started to hatch a plan to bring an end to the group’s summer time woes. Pritchard’s property had an old badminton court so they started there with hopes of playing. However, they couldn’t find enough rackets for a full game so instead, he improvised by using spare ping pong paddles and a wiffle ball. With these bits and pieces lying around, a brand-new game was born.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  <section class="page-section about-heading">
+    <div class="container">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/Pickleball-court.jpg' %}" alt="..." />
+        <div class="about-heading-content">
+            <div class="row">
+                <div class="col-xl-9 col-lg-10 mx-auto">
+                    <div class="bg-faded2 rounded p-5">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Rules</span>
+                            <span class="section-heading-lower">General Rules</span>
+                        </h2>
+                        <ul>
+                          <li> Pickleball is played either as doubles (two players per team) or singles; doubles is most common</li>
+                          <li> The same size playing area and rules are used for both singles and doubles</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<br>
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">The Serve</span>
+                      </h2>
+                      <ul>
+                        <li> The server’s arm must be moving in an upward arc when the ball is struck</li>
+                        <li> Paddle contact with the ball must not be made above the waist level.</li>
+                        <li> The head of the paddle must not be above the highest part of the wrist at contact.</li>
+                        <li> At the time the ball is struck, the server’s feet may not touch the court or outside the imaginary extension of the sideline or centerline and at least one foot must be behind the baseline on the playing surface or the ground behind the baseline..</li>
+                        <li> The serve is made diagonally crosscourt and must land within the confines of the opposite diagonal court.</li>
+                        <li> Only one serve attempt is allowed per server.</li>
+                    </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<br>
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">Serving Sequence</span>
+                      </h2>
+                      <ul>
+                        <li>Both players on the serving doubles team have the opportunity to serve and score points until they commit a fault (except for the first service sequence of each new game).</li>
+                        <li>The first serve of each side-out is made from the right/even court.</li>
+                        <li>If a point is scored, the server switches sides and the server initiates the next serve from the left/odd court.</li>
+                        <li>As subsequent points are scored, the server continues switching back and forth until a fault is committed and the first server loses the serve.</li>
+                        <li>When the first server loses the serve the partner then serves from their correct side of the court (except for the first service sequence of the game*).</li>
+                        <li>The second server continues serving until his team commits a fault and loses the serve to the opposing team.</li>
+                        <li>Once the service goes to the opposition (at side out), the first serve is from the right/even court and both players on that team have the opportunity to serve and score points until their team commits two faults.</li>
+                        <li>In singles the server serves from the right/even court when his or her score is even and from the left/odd when the score is odd.</li>
+                      </ul>
+                        <div>*At the beginning of each new game only one partner on the serving team has the opportunity to serve before faulting, after which the service passes to the receiving team.</div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<br>
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">Scoring</span>
+                      </h2>
+                      <ul>
+                        <li>Points are scored only by the serving team.</li>
+                        <li>Games are normally played to 11 points, win by 2.</li>
+                        <li>Tournament games may be to 15 or 21, win by 2.</li>
+                        <li>When the serving team’s score is even (0, 2, 4, 6, 8, 10) the player who was the first server in the game for that team will be in the right/even court when serving or receiving; when odd (1, 3, 5, 7, 9) that player will be in the left/odd court when serving or receiving.</li>
+                      </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<br>   
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">Two-Bounce Rule</span>
+                      </h2>
+                      <ul>
+                        <li>When the ball is served, the receiving team must let it bounce before returning, and then the serving team must let it bounce before returning, thus two bounces.</li>
+                        <li>After the ball has bounced once in each team’s court, both teams may either volley the ball (hit the ball before it bounces) or play it off a bounce (ground stroke).</li>
+                        <li>The two-bounce rule eliminates the serve and volley advantage and extends rallies.</li>
+                    </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<br>  
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">The Non-Volley Zone</span>
+                      </h2>
+                      <ul>
+                        <li>The non-volley zone (kitchen) is the court area within 7 feet on both sides of the net.</li>
+                        <li>Volleying is prohibited within the non-volley zone. This rule prevents players from executing smashes from a position within the zone.</li>
+                        <li>It is a fault if, when volleying a ball, the player steps on the non-volley zone, including the line and/or when the player’s momentum causes them or anything they are wearing or carrying to touch the non-volley zone including the associated lines.</li>
+                        <li>It is a fault if, after volleying, a player is carried by momentum into or touches the non-volley zone, even if the volleyed ball is declared dead before this happens.</li>
+                        <li>A player may legally be in the non-volley zone any time other than when volleying a ball.</li>
+                        <li>The non-volley zone is commonly referred to as “the kitchen.”</li>
+                    </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<br>   
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">Line Calls</span>
+                      </h2>
+                      <ul>
+                        <li>A ball contacting any part of any line, except the non-volley zone line on a serve, is considered “in.”</li>
+                        <li>A serve contacting the non-volley zone line is short and a fault.</li>
+                      </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<br>
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">Faults</span>
+                      </h2>
+                      <ul>
+                        <li>A fault is any action that stops play because of a rule violation.</li>
+                        <li>A fault by the receiving team results in a point for the serving team.</li>
+                        <li>A fault by the serving team results in the server’s loss of serve or side out.</li>
+                      </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<br>
+<section class="page-section about-heading">
+  <div class="container">
+      <div class="about-heading-content">
+          <div class="row">
+              <div class="col-xl-9 col-lg-10 mx-auto">
+                  <div class="bg-faded2 rounded p-5">
+                      <h2 class="section-heading mb-4">
+                          <span class="section-heading-lower">Determine Serving Team</span>
+                      </h2>
+                      <ul>
+                        <li>Any fair method can be used to determine which player or team has first choice of side, service, or receive. (Example: Write a 1 or 2 on the back of the score sheet.)</li>
+                      </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>                 
+    </body>
+    </html>
 </div>
 {% endblock %}
