--- a/templates/picklepagestemplates/equipment.html
+++ b/templates/picklepagestemplates/equipment.html
@@ -1,4 +1,132 @@
 {% extends 'base.html' %}
+{%load static%}
 {% block content %}
-<h1>Hello Equipment</h1>
+<center><h1 class="totaltitle">Equipment</h1></center>
+<!-- https://www.travelandleisure.com/attractions/sporting-events/best-pickleball-equipment#:~:text=What%20equipment%20do%20I%20need,court%20on%20which%20to%20play. -->
+<section class="page-section about-heading">
+    <div class="container">
+        <center><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/Pickleball-court.jpg' %}" alt="..." /></center>
+        <div class="about-heading-content">
+            <div class="row">
+                <div class="col-xl-9 col-lg-10 mx-auto">
+                    <div class="bg-faded2 rounded p-5">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Equipment</span>
+                            <span class="section-heading-lower">Tips</span>
+                        </h2>
+                        <p>Whether you are new or experienced to pickleball, it is difficult to decide which equipment to buy.  We may be pulled by expensive options or budget options without knowing the pros and cons of each.  With this guide, we hope to help you on your journey of finding what is right for your style of play.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="page-section about-heading">
+    <div class="container">
+        <center><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/20-header-pickleball.jpg' %}" alt="..." /></center>
+        <div class="about-heading-content">
+            <div class="row">
+                <div class="col-xl-9 col-lg-10 mx-auto">
+                    <div class="bg-faded2 rounded p-5">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Equipment</span>
+                            <span class="section-heading-lower">Buy equipment based on your experience level</span>
+                        </h2>
+                        <p>If you’ve never played a racket sport before, Carl Schmits, Managing Director of Equipment Standards and Facilities Development at USA Pickleball Association, suggests “a conventional wide-body shape” when selecting a paddle. “This will have a balanced feel, be very maneuverable, and will serve a starter well when blocking fast balls.” But if you have some experience in sports like tennis, racquetball, or squash, go with “paddles that have a longer shape, taking advantage of stroke mechanics developed previously.” As you gain experience, you can then explore higher-tech rackets like those with carbon fiber-faced paddles, which “provide considerable friction enabling more spin.”</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<br>
+<section class="page-section about-heading">
+    <div class="container">
+        <center><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/paddles.png' %}" alt="..." /></center>
+        <div class="about-heading-content">
+            <div class="row">
+                <div class="col-xl-9 col-lg-10 mx-auto">
+                    <div class="bg-faded2 rounded p-5">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Equipment</span>
+                            <span class="section-heading-lower">Make sure you consider a paddle’s key components</span>
+                        </h2>
+                        <p>Pickleball Central, the official retailer for the USA Pickleball Association, says that the three key considerations are price, weight, and grip size. The three material categories are wood (priced from $13-36), composite ($45-145), and graphite ($60-145). Wood paddles are the least expensive, but, as experts point out, are also the heaviest and don’t provide as much pop. Heavier paddles do help you drive the ball, but you sacrifice control and also increase arm fatigue. Grip size dictates the control you’ll have on the paddle. Go too big and it may cause the paddle to slip in your hand. If you’re stuck between sizes, Pickleball Central advises to go with a smaller size first, as they allow for more wrist action, which aids in putting spin on the ball and enhances control. Grips range between 4 and 4.5 inches around and are broken out into ⅛-inch increments.</p>
+                        <center><div>Shop for paddles here:</div></center>
+                        <center>
+                        <button onclick="window.location.href='https://www.amazon.com/s?k=pickleball+paddles+beginner&crid=16MFVQFX6O3UB&sprefix=pickleball+paddles+beginner%2Caps%2C122&ref=nb_sb_noss_1'">Beginner Paddles</button>
+                        <button onclick="window.location.href='https://www.amazon.com/s?k=pickleball+paddles+indermediate&crid=35WU01ORA64P6&sprefix=pickleball+paddles+indermediate%2Caps%2C102&ref=nb_sb_noss'">Intermediate Paddles</button>
+                        <button onclick="window.location.href='https://www.amazon.com/s?k=pickleball+paddles+advanced&crid=1TK02LM6IWHH4&sprefix=pickleball+paddles+advanced%2Caps%2C119&ref=nb_sb_noss_1'">Advanced Paddles</button>
+                        </center>
+                              </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<br>
+<section class="page-section about-heading">
+    <div class="container">
+        <center><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/shoes.jpg' %}" alt="..." /></center>
+        <div class="about-heading-content">
+            <div class="row">
+                <div class="col-xl-9 col-lg-10 mx-auto">
+                    <div class="bg-faded2 rounded p-5">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Equipment</span>
+                            <span class="section-heading-lower">Make sure your pickleball shoes provide traction and lateral stability</span>
+                        </h2>
+                        <p>“Shoes designed for tennis are best for outdoor play,” advises Schmits. “Those intended for squash, racquetball, and table tennis are best for indoor maple or other non-acrylic (like a tennis court). Do not sacrifice support for lightness; a play session is typically several hours and the support and comfort are needed.” Naturally, the footwear industry also has pickleball-specific shoes, typically with wider-than-average toe boxes for added stability and comfort and tech to help support quick lateral movements.</p>
+                        <center>
+                            <button onclick="window.location.href='https://www.amazon.com/s?k=pickleball+shoes&crid=24IVI6C3US4WD&sprefix=pickleball+shoes%2Caps%2C121&ref=nb_sb_noss_1'">Shop for shoes here</button>
+                        </center>
+
+                              
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<br>
+<section class="page-section about-heading">
+    <div class="container">
+        <center><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/equip.png' %}" alt="..." /></center>
+        <div class="about-heading-content">
+            <div class="row">
+                <div class="col-xl-9 col-lg-10 mx-auto">
+                    <div class="bg-faded2 rounded p-5">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Equipment</span>
+                            <span class="section-heading-lower">What equipment do I need to play pickleball?</span>
+                        </h2>
+                        <p>Each player needs a paddle, and you also need a ball and a net as well as a court on which to play. “There are two types of construction for balls; injection-molded balls, which generally play a bit slower and are quieter, and roto-molded, which play faster,” says Schmits. “Indoor balls for playing on maple (gymnasium) or other non-acrylic (like a tennis court) surfaces are injection-molded.” In terms of apparel, most players wear clothes similar to tennis attire because much of the athletic actions are similar. You want a pair of shoes that can support lateral movement and quick changes in direction and that grip confidently on the court surface (inside and out). Outdoor players also typically wear sunglasses and brimmed hats or visors to help cut down on the sun’s glare, as well as loose-fitting clothes that won’t restrict movement.</p>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<br>
+<section class="page-section about-heading">
+    <div class="container">
+        <center><img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/paddles1.jpg' %}" alt="..." /></center>
+        <div class="about-heading-content">
+            <div class="row">
+                <div class="col-xl-9 col-lg-10 mx-auto">
+                    <div class="bg-faded2 rounded p-5">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Equipment</span>
+                            <span class="section-heading-lower">How do I pick a pickleball paddle?</span>
+                        </h2>
+                        <p>“If you are new to racket and paddle sports, we suggest a conventional wide-body shape,” says Schmits. “This will have a balanced feel, be very maneuverable, and will serve a starter well when blocking fast balls at the non-volley line. If you come from a racket or paddle sport with a big swing (tennis, racquetball, squash), you'll likely be comfortable with paddles that have a longer shape, taking advantage of stroke mechanics developed previously. Some come in a round, shorter shape that will feel familiar to table tennis players.” When evaluating paddles, start with your price point; if you’re mildly curious about the game, wooden paddles are a solid, budget-friendly starter option. But more skilled racket players will benefit from those with wider faces that employ elements like carbon fiber, which helps with ball control. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<br>
 {% endblock%}
