--- a/templates/picklepagestemplates/index.html
+++ b/templates/picklepagestemplates/index.html
@@ -1,4 +1,34 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-<h1>Hello Index</h1>
+<section class="page-section clearfix">
+    <div class="container">
+        <div class="intro">
+            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'img/Pickleball-court.jpg' %}" alt="..." />
+            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+                <h2 class="section-heading mb-4">
+                    <span class="section-heading-upper">Pickleball</span>
+                    <span class="section-heading-lower">Sport for Everyone</span>
+                </h2>
+                <p class="mb-3">Pickleball has swept the nation as it never has before.  It seems as though most parks are putting in courts, and everyone owns a paddle!  This website should make it easy to get started or familiarize yourself in the Utah area.</p>
+                <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="{% url 'courts' %}">Find Courts Today!</a></div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="page-section cta">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-9 mx-auto">
+                <div class="cta-inner bg-faded text-center rounded">
+                    <h2 class="section-heading mb-4">
+                        <span class="section-heading-upper">Our Promise</span>
+                        <span class="section-heading-lower">To You</span>
+                    </h2>
+                    <p class="mb-0">Once you start getting into pickleball, your life will change.  There is a wonderful community of friends, competitors, and everything in between!  You will never regret getting started and staying connected, and we can promise to help you out every single step of the way.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock%}
