--- a/templates/base.html
+++ b/templates/base.html
@@ -1,87 +1,49 @@
 {% load static %}
 
 <!DOCTYPE html>
-
 <html lang="en">
-
     <head>
-
         <meta charset="utf-8" />
-
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-        <title>Pickleball</title>
-
-        <link rel="icon" type="image/x-icon" href="{% static 'img/world.png' %}"/>
-
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-
-        <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title class = "titletext">PicklePal</title>
+        <link rel="icon" type="image/x-icon" href="{% static 'img/img.webp' %}" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-
     </head>
-
     <body>
-
         <!-- Navigation-->
-
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-
+        <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
             <div class="container">
-
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-
-                    Menu
-
-                    <i class="fas fa-bars ml-1"></i>
-
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-
-                    <ul class="navbar-nav text-uppercase ml-auto">
-
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'about' %}">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'courts' %}">Courts</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'equip' %}">Equipment</a></li>
-
+                <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="{% url 'index' %}">PicklePal</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <img style="width: 50px" src="{% static 'img/img.webp' %}" alt="..." />
+                    <h1 class="nav-item px-lg-4" href="{% url 'index' %}">PicklePal</h1>
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'index' %}">Home</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'about' %}">About</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'equip' %}">Equipment</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'courts' %}">Courts</a></li>
                     </ul>
-
                 </div>
-
             </div>
-
         </nav>
-
         {% block content %}
-
         {% endblock %}
-
-        <!-- Footer-->
-
-        <footer class="footer py-4">
-
-            <div class="container">
-
-                <div class="row align-items-center">
-
-                    <div>Copyright ©Envelope 4 Group 10 Fall 2022</div>
-
-                </div>
-
-            </div>
-
+        
+        <footer class="footer text-faded text-center py-5">
+            <div class="container"><p class="m-0 small">Copyright &copy; IS Section 4 Group 10 2022</p></div>
         </footer>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
     </body>
-
 </html>
