--- a/templates/picklepagestemplates/courts/updatecourt.html
+++ b/templates/picklepagestemplates/courts/updatecourt.html
@@ -3,36 +3,168 @@
 {% block content %}
 <div class="container">
     <div class = "text-left">
-        <h2 class="section-heading text-uppercase">Customers</h2>
+        <center><h2 class="section-heading text-uppercase">{{record.courtname}}</h2></center>
     </div>
     <br>
-    <form name="form" method="post" action="{% url 'updateCust' %}">
+    <form name="form" method="post" action="{% url 'updateCourt' %}">
         {% csrf_token %}
-        <input type="hidden" id="cust_id" name="cust_id" value="{{record.id}}">
+        <input type="hidden" id="court_id" name="court_id" value="{{record.id}}">
 
-        <label for="first_name">First Name:</label>
-        <input type="text" name='first_name' id='first_name' value="{{record.first_name}}" autofocus>
+        <label for="courtname">Court Name:</label>
+        <input type="text" name='courtname' id='courtname' value="{{record.courtname}}" autofocus>
         <br><br>
 
-        <label for="last_name">Last Name:</label>
-        <input type="text" name='last_name' id='last_name' value="{{record.last_name}}" >
+        <label for="courtaddress">Court Address:</label>
+        <input type="text" name='courtaddress' id='courtaddress' value="{{record.courtaddress}}" >
         <br><br>
 
-        <label for="user_name">User Name:</label>
-        <input type="text" name='user_name' id='user_name' value="{{record.user_name}}" >
+        <label for="numberofcourts">Number of Courts:</label>
+        <input type="text" name='numberofcourts' id='numberofcourts' value="{{record.numberofcourts}}" >
         <br><br>
 
-        <label for="password">Password:</label>
-        <input type="text" name='password' id='password' value="{{record.password}}" >
+        {% if record.courtofficiators == "Yes" %}
+        <label for="courtofficiators">Court Officiators:</label>
+        <select id="courtofficiators" name="courtofficiators">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+        </select>
+        <br><br>
+        {% else %}
+        <label for="courtofficiators">Court Officiators:</label>
+        <select id="courtofficiators" name="courtofficiators">
+            <option value="No">No</option>
+            <option value="Yes">Yes</option>
+        </select>
+        <br><br>
+        {% endif %}
+        {% if record.lights == "Yes" %}
+        <label for="lights">Lights:</label>
+        <select id="lights" name="lights">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+        </select>
+        <br><br>
+        {% else %}
+        <label for="lights">Lights:</label>
+        <select id="lights" name="lights">
+            <option value="No">No</option>
+            <option value="Yes">Yes</option>
+        </select>
+        <br><br>
+        {% endif %}
+
+        {% if record.closingtime == "9:00 PM" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="9:00 PM">9 PM</option>
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="10:00 PM">10 PM</option>
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="11:00 PM">11 PM</option>
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="12 AM">12 AM</option>
+            <option value="NA">NA</option>
+        </select>
         <br><br>
 
-        <label for="email">Email:</label>
-        <input type="text" name='email' id='email' value="{{record.email}}" >
+        {% elif record.closingtime == "9:30 PM" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="9:00 PM">9:00 PM</option>
+            <option value="10:00 PM">10 PM</option>
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="11:00 PM">11 PM</option>
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="12 AM">12 AM</option>
+            <option value="NA">NA</option>
+        </select>
         <br><br>
 
-        <label for="phone">Phone:</label>
-        <input type="text" name='phone' id='phone' value="{{record.phone}}" >
+        {% elif record.closingtime == "10:00 PM" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="10:00 PM">10:00 PM</option>
+            <option value="9:00 PM">9:00 PM</option>
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="11:00 PM">11 PM</option>
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="12 AM">12 AM</option>
+            <option value="NA">NA</option>
+        </select>
         <br><br>
+
+        {% elif record.closingtime == "10:30 PM" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="9:00 PM">9:00 PM</option>
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="10:00 PM">10 PM</option>
+            <option value="11:00 PM">11 PM</option>
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="12 AM">12 AM</option>
+            <option value="NA">NA</option>
+        </select>
+        <br><br>
+
+        {% elif record.closingtime == "11:00 PM" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="11:00 PM">11 PM</option>
+            <option value="9:00 PM">9:00 PM</option>
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="10:00 PM">10 PM</option>
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="12 AM">12 AM</option>
+            <option value="NA">NA</option>
+        </select>
+        <br><br>
+
+        {% elif record.closingtime == "11:30 PM" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="9:00 PM">9:00 PM</option>
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="10:00 PM">10 PM</option>
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="11:00 PM">11 PM</option>
+            <option value="12 AM">12 AM</option>
+            <option value="NA">NA</option>
+        </select>
+        <br><br>
+
+        {% elif record.closingtime == "12 AM" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="12 AM">12 AM</option>
+            <option value="9:00 PM">9:00 PM</option>
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="10:00 PM">10 PM</option>
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="11:00 PM">11 PM</option>
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="NA">NA</option>
+        </select>
+        <br><br>
+
+        {% elif record.closingtime == "NA" %}
+        <label for="closingtime">Closing Time:</label>
+        <select id="closingtime" name="closingtime" value="{{record.closingtime}}">
+            <option value="NA">NA</option>
+            <option value="9:00 PM">9:00 PM</option>
+            <option value="9:30 PM">9:30 PM</option>
+            <option value="10:00 PM">10 PM</option>
+            <option value="10:30 PM">10:30 PM</option>
+            <option value="11:00 PM">11 PM</option>
+            <option value="11:30 PM">11:30 PM</option>
+            <option value="12 AM">12 AM</option>
+        </select>
+        <br><br>
+        {% endif %}
 
         <button type="submit">Update</button>
     </form>
