--- a/templates/picklepagestemplates/about.html
+++ b/templates/picklepagestemplates/about.html
@@ -5,7 +5,7 @@
     <center><h1 class="totaltitle">About</h1></center>
     <section class="page-section about-heading">
       <div class="container">
-          <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/Pickleball-court.jpg' %}" alt="..." />
+          <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/pickleball1.webp' %}" alt="..." />
           <div class="about-heading-content">
               <div class="row">
                   <div class="col-xl-9 col-lg-10 mx-auto">
@@ -24,7 +24,7 @@
   </section>
   <section class="page-section about-heading">
     <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/Pickleball-court.jpg' %}" alt="..." />
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'img/pickleball2.webp' %}" alt="..." />
         <div class="about-heading-content">
             <div class="row">
                 <div class="col-xl-9 col-lg-10 mx-auto">
